// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blueprint_in_behavior.asm 1`] = `
{
  "0": {
    "bp": {
      "disconnected": true,
      "frame": "f_bot_1m_a",
      "name": "Example Bot 1",
      "regs": {
        "2": {
          "id": "c_power_transmitter",
        },
      },
    },
    "next": false,
    "op": "produce",
  },
  "name": "foo",
  "parameters": [],
}
`;

exports[`blueprint_with_behavior.asm 1`] = `
{
  "components": [
    [
      "c_robotics_factory",
      1,
    ],
    [
      "c_robotics_factory",
      2,
    ],
    [
      "c_internal_storage",
      3,
    ],
    [
      "c_internal_storage",
      4,
    ],
    [
      "c_internal_storage",
      5,
    ],
    [
      "c_behavior",
      6,
      {
        "0": {
          "bp": {
            "components": [
              [
                "c_power_transmitter",
                1,
              ],
              [
                "c_behavior",
                3,
                {
                  "0": {
                    "next": false,
                    "op": "notify",
                    "txt": "Hello World",
                  },
                  "name": "fnBot1",
                  "parameters": [],
                },
              ],
            ],
            "disconnected": false,
            "frame": "f_bot_1m_a",
            "logistics": {
              "channel_1": false,
              "channel_2": true,
              "channel_3": false,
              "channel_4": true,
            },
            "name": "Example Bot 1",
            "regs": {
              "2": {
                "id": "c_power_transmitter",
              },
            },
          },
          "op": "produce",
        },
        "1": {
          "0": 2,
          "1": 3,
          "op": "compare_item",
        },
        "2": {
          "bp": {
            "components": [
              [
                "c_medium_storage",
                1,
              ],
              [
                "c_modulespeed",
                2,
              ],
              [
                "c_behavior",
                3,
              ],
            ],
            "disconnected": true,
            "frame": "f_bot_1m_c",
            "locks": [
              "metalore",
              "metalbar",
              true,
              false,
              false,
              true,
              "metalore",
            ],
            "logistics": {
              "can_construction": false,
              "carrier": false,
              "transport_route": true,
            },
            "name": "Example Bot 2",
          },
          "op": "produce",
        },
        "3": {
          "0": 4,
          "1": 3,
          "op": "compare_item",
        },
        "4": {
          "0": {
            "id": "f_bot_1m_a",
            "num": 1,
          },
          "1": 4,
          "op": "set_reg",
        },
        "5": {
          "0": 6,
          "1": 5,
          "next": false,
          "op": "compare_item",
        },
        "name": "fnBotFactory",
        "parameters": [
          false,
          false,
          false,
          true,
          false,
        ],
        "pnames": [
          "targetLocation",
          "craft1",
          "active1",
          "craft2",
          "active2",
        ],
      },
    ],
  ],
  "disconnected": false,
  "frame": "f_building2x1a",
  "links": [
    [
      13,
      5,
    ],
    [
      5,
      12,
    ],
    [
      3,
      6,
    ],
    [
      7,
      11,
    ],
    [
      15,
      8,
    ],
    [
      8,
      14,
    ],
    [
      3,
      9,
    ],
    [
      10,
      11,
    ],
  ],
  "name": "Bot Factory",
}
`;

exports[`dead_code_deletion.asm 1`] = `
{
  "0": {
    "op": "set_reg",
  },
  "1": {
    "next": 1,
    "op": "set_reg",
  },
  "parameters": [],
}
`;

exports[`empty.asm 1`] = `
{
  "name": "foo",
  "parameters": [],
}
`;

exports[`issue2.asm 1`] = `
{
  "0": {
    "0": -1,
    "1": -1,
    "next": 1,
    "op": "set_reg",
  },
  "name": "foo",
  "parameters": [],
}
`;

exports[`label.asm 1`] = `
{
  "0": {
    "0": {
      "id": "v_letter_A",
      "num": 1,
    },
    "1": "A",
    "op": "set_reg",
  },
  "1": {
    "0": "A",
    "op": "jump",
  },
  "2": {
    "0": {
      "id": "v_letter_A",
    },
    "op": "label",
  },
  "3": {
    "op": "notify",
    "txt": "0",
  },
  "4": {
    "op": "exit",
  },
  "5": {
    "0": {
      "id": "v_letter_A",
      "num": 1,
    },
    "op": "label",
  },
  "6": {
    "op": "notify",
    "txt": "1",
  },
  "7": {
    "next": false,
    "op": "exit",
  },
  "parameters": [],
}
`;

exports[`nested_sub.asm 1`] = `
{
  "0": {
    "next": false,
    "op": "call",
    "sub": 1,
  },
  "name": "foo",
  "parameters": [],
  "subs": [
    {
      "0": {
        "next": false,
        "op": "call",
        "sub": 2,
      },
      "name": "sub1",
      "parameters": [],
    },
    {
      "0": {
        "next": false,
        "op": "notify",
        "txt": "hello world",
      },
      "name": "sub2",
      "parameters": [],
    },
  ],
}
`;

exports[`nil_dest.asm 1`] = `
{
  "0": {
    "0": {
      "num": 1,
    },
    "next": false,
    "op": "set_reg",
  },
  "parameters": [],
}
`;

exports[`out_of_order.asm 1`] = `
{
  "0": {
    "0": {
      "id": "v_letter_A",
    },
    "next": false,
    "op": "jump",
  },
  "1": {
    "0": {
      "id": "v_letter_A",
    },
    "op": "label",
  },
  "2": {
    "op": "notify",
    "txt": "again",
  },
  "3": {
    "0": {
      "id": "v_letter_A",
    },
    "next": false,
    "op": "jump",
  },
  "parameters": [],
}
`;

exports[`param_rw.asm 1`] = `
{
  "0": {
    "0": 1,
    "op": "notify",
    "txt": "hi",
  },
  "1": {
    "0": 2,
    "op": "get_self",
  },
  "2": {
    "0": 3,
    "1": 4,
    "2": 5,
    "next": false,
    "op": "call",
    "sub": 1,
  },
  "name": "foo",
  "parameters": [
    false,
    true,
    true,
    false,
    false,
  ],
  "pnames": [
    "v",
    "v2",
    "v3",
    "v4",
    "v5",
  ],
  "subs": [
    {
      "0": {
        "0": 2,
        "1": 1,
        "op": "call",
        "sub": 2,
      },
      "1": {
        "0": 1,
        "1": 3,
        "next": false,
        "op": "call",
        "sub": 3,
      },
      "name": "sub1",
      "parameters": [
        true,
        false,
        false,
      ],
      "pnames": [
        "v3",
        "v4",
        "v5",
      ],
    },
    {
      "0": {
        "0": 2,
        "1": 1,
        "next": false,
        "op": "call",
        "sub": 4,
      },
      "name": "sub1_1",
      "parameters": [
        false,
        true,
      ],
      "pnames": [
        "v4",
        "v3",
      ],
    },
    {
      "0": {
        "0": 1,
        "1": 2,
        "next": false,
        "op": "call",
        "sub": 4,
      },
      "name": "sub1_2",
      "parameters": [
        true,
        false,
      ],
      "pnames": [
        "v3",
        "v5",
      ],
    },
    {
      "0": {
        "0": 1,
        "op": "get_self",
      },
      "1": {
        "0": 2,
        "next": false,
        "op": "notify",
      },
      "name": "sub2",
      "parameters": [
        true,
        false,
      ],
      "pnames": [
        "v3",
        "v4_5",
      ],
    },
  ],
}
`;

exports[`recurse_main.asm 1`] = `
{
  "0": {
    "next": false,
    "op": "call",
    "sub": 0,
  },
  "name": "foo",
  "parameters": [],
}
`;
